# PolyDegradeML

./: .gitignore  CITATION.cff  CODEBASE_AUDIT.md  CONTRIBUTING.md  LICENSE  README.md  REPOSITORY_MAP.md  RUNBOOK.md  activate-project.sh  pyproject.toml  requirements-verified.txt  requirements.txt
data/: README.md
datasets/: README.md  polymer_structure_dataset_sources.md
docs/: README.md  publication_artifact_provenance.md  publication_run_2026-05-28.md
figures/: README.md
notebooks/: README.md
paper/: PolyDegradeML_consolidated_manuscript.docx  README.md  build_consolidated_docx.py  evidence_mapped_outline.md  manuscript_draft.md  missing_information_to_ask_author.md  outline.md  publication_readiness_checklist.md  tables_and_figures_plan.md
presentation/: PROJECT_SLIDES.md  Plastic_Degradation_Project_Presentation.pptx  PolyDegradeML_academic_ted_talk.pptx  PolyDegradeML_academic_ted_talk_speaker_notes.md  PolyDegradeML_comprehensive_defense_speaker_notes.md  README.md  SLIDE_ASSET_GUIDE.md  build_academic_ted_talk.mjs  build_comprehensive_defense_deck.mjs  build_project_slides.py
reports/: README.md  baseline_modeling.md  cross_environment_validation.md  dataset_curation.md  descriptor_graph_prototype_summary.txt  feature_engineering_summary.txt  feature_importance_selection_summary.txt  main_findings.md  model_reliability_report.md  model_reliability_summary.txt  neural_network_baseline_summary.txt  stratified_cross_validation_summary.txt  uncertainty_reliability_summary.txt  week13_model_reliability_scoreboard.csv  week13_model_selection_report.md
results/: README.md
(+145 files in other folders)
