[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biodegradation-ml-framework"
version = "0.1.0"
description = "Reliability-centered machine learning framework for biodegradation prediction."
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.3.5,<2.4",
  "pandas>=2.3.3,<2.4",
  "scikit-learn>=1.7.2,<1.8",
  "imbalanced-learn==0.14.0",
  "matplotlib>=3.10.7,<3.11",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
